--- a/Part_1_Deep_Learning_with_Pytorch/week2/week_2_exercises.ipynb
+++ b/Part_1_Deep_Learning_with_Pytorch/week2/week_2_exercises.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/HDshamun/HDshamun/blob/main/Part_1_Deep_Learning_with_Pytorch/week2/week_2_exercises.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "JIurU80WOon0"
       },
       "source": [
@@ -43,14 +53,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "vscode": {
           "languageId": "plaintext"
         },
-        "id": "qe4Tv_apOooA"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qe4Tv_apOooA",
+        "outputId": "0bbd3383-70e4-4e09-eb95-7369662bbd83"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2025-01-31 12:03:39--  https://archive.ics.uci.edu/static/public/607/synchronous+machine+data+set.zip\n",
+            "Resolving archive.ics.uci.edu (archive.ics.uci.edu)... 128.195.10.252\n",
+            "Connecting to archive.ics.uci.edu (archive.ics.uci.edu)|128.195.10.252|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: unspecified\n",
+            "Saving to: ‘data.zip’\n",
+            "\n",
+            "\rdata.zip                [<=>                 ]       0  --.-KB/s               \rdata.zip                [ <=>                ]  14.37K  --.-KB/s    in 0.03s   \n",
+            "\n",
+            "2025-01-31 12:03:39 (554 KB/s) - ‘data.zip’ saved [14713]\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# download dataset in colab env\n",
         "!wget https://archive.ics.uci.edu/static/public/607/synchronous+machine+data+set.zip -O data.zip"
@@ -72,9 +104,14 @@
     },
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "include_colab_link": true
     },
-    "accelerator": "GPU"
+    "accelerator": "GPU",
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
